--- a/FLSocketIM/Info.plist
+++ b/FLSocketIM/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>iosamap</string>
+		<string>baidumap</string>
+	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>应用需要访问您的位置</string>
 	<key>NSMicrophoneUsageDescription</key>
